# open_manipulator_6dof_simulations

./: README.md
open_manipulator_6dof_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_6dof_gazebo/config/: open_manipulator_6dof_controller.yaml
open_manipulator_6dof_gazebo/launch/: open_manipulator_6dof_controller.launch
open_manipulator_6dof_gazebo/src/: gripper_6dof_sub_publisher.cpp
open_manipulator_6dof_simulations/: package.xml
open_manipulator_6dof_simulations/open_manipulator_6dof_gazebo/launch/: open_manipulator_6dof_controller.launch  open_manipulator_6dof_gazebo.launch
open_manipulator_6dof_simulations/open_manipulator_6dof_gazebo/src/: gripper_sub_publisher2.cpp
open_manipulator_6dof_simulations/open_manipulator_6dof_simulations/: CHANGELOG.rst  CMakeLists.txt
