<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_6dof_simulations</name>
  <version>1.0.0</version>
  <description>
    Simulation packages for OpenManipulator 6DOF
  </description>
  <license>Apache 2.0</license>
  <author email="zang09@naver.com">Hae-Bum Jung</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="hjkim@robotis.com">Hye-Jong KIM</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="yhna@robotis.com">Yong-Ho Na</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>open_manipulator_gazebo</exec_depend>
  <export><metapackage/></export>
</package>
